[tool.poetry]
name = "psik"
version = "1.2.1"
description = "Portable Submission Interface for Jobs"
authors = ["David M. Rogers <predictivestatmech@gmail.com>"]

[tool.poetry.scripts]
psik = 'psik.psik:app'

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pydantic = "^2.1.1"
pystache = "^0.6.5"
typer = "^0.9.0"
anyio = "^4.0.0"
importlib-metadata = "^6.8.0"
aiohttp = ">=3.8.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=6.1.0"
mypy = "^1.5.1"
pytest-asyncio = ">=0.20.3"
pytest-cov = ">=4.1.0"
pytest-aiohttp = ">=1.0.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
