[project]
name = "psik"
version = "3.1.0"
description = "Portable Submission Interface for Jobs"
authors = [
 { name="David M. Rogers", email="predictivestatmech@gmail.com"}
]
license = "BSD-3-Clause"
readme = "README.md"

requires-python = ">=3.9,<4.0"
dependencies = [
  "pydantic >=2.1.1,<3.0",
  "typer >=0.9,<1.0",
  "anyio >=4.0.0,<5.0",
  "importlib-metadata >=6.8.0,<7.0",
  "aiohttp >=3.8.0,<4.0",
  "pyyaml >=6.0.2,<7.0",
]

[project.urls]
repository = "https://github.com/frobnitzem/psik"

[project.scripts]
psik = "psik.psik:app"

[project.optional-dependencies]
facilities = ["globus-compute-sdk",
              "sfapi_client"]

dev = [
  "pytest >=6.1.0",
  "mypy >=1.5.1,<2.0",
  "pytest-asyncio >=1.2.0,<2.0",
  "pytest-cov >=4.1.0,<5.0",
  "pytest-aiohttp >=1.0.5,<2.0",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["psik*"]
